--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill1" src="images/skills.png" alt="skill1">
+        <img class="skill1" src="images/Skills.png" alt="skill1">
         <h3>Gaming.</h3>
         <p>Whenever I have freetime, I play games. I love gaming and I have a lot of fun doing the same. I started gaming when I was 10 years old and I love the feeling I get everytime I game, I am so grateful that I found out about gaming or my life would have been totally different.</p>
       </div>
       <div class="skill-row">
-        <img class="skill2" src="images/skill.png" alt="skill2">
+        <img class="skill2" src="images/Skill.png" alt="skill2">
         <h3>Video Recording & Editing.</h3>
         <p>I have been recording and editing videos ever since I was 13 years old since I was really passionate about doing the same and I wanted to become a big YouTuber someday. As of now, I have 11K Subscribers and I am really proud of the same, improving every single day.</p>
       </div>
